# GoQuant

./: .gitignore  CMakeLists.txt  README.md  ans
include/: CancelOrder.h  DeribitAuth.h  DeribitTrading.h  GetOrderBook.h  GetPosition.h  HTTPClient.h  Logger.h  ModifyOrder.h  PlaceOrder.h  WebSocketServer.h
src/: CancelOrder.cpp  DeribitAuth.cpp  DeribitTrading.cpp  GetOrderBook.cpp  GetPosition.cpp  HTTPClient.cpp  Logger.cpp  ModifyOrder.cpp  PlaceOrder.cpp  WebSocketServer.cpp  main.cpp
websocket_test/: instruments.txt  test_websocket_client.py
